# ner-extractor

./: pyproject.toml
ner_extractor/: __init__.py  entity_extractor.py
