[tool.poetry]
name = "ner-extractor"
version = "0.1.0"
description = ""
authors = ["André Claudino <claudino@d2x.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1"
langchain = "^0.1"
gliner = "^0.1.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff.format]
preview = true
quote-style = "single"

[tool.ruff.lint]
preview = true
extend-select = ["C901"]
